--- a/Ejercicios/SistemaReserva/src/main/java/vistas/Vuelo.form
+++ b/Ejercicios/SistemaReserva/src/main/java/vistas/Vuelo.form
@@ -4,29 +4,25 @@
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
       <SubComponents>
-        <Menu class="javax.swing.JMenu" name="MenuReservas">
+        <Menu class="javax.swing.JMenu" name="MenuConsultas">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Reservas"/>
+            <Property name="text" type="java.lang.String" value="Consultas"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="Consultar">
+            <MenuItem class="javax.swing.JMenuItem" name="InfoReservas">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Consultar"/>
+                <Property name="text" type="java.lang.String" value="Informaci&#xf3;n de Reservas"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </MenuItem>
-          </SubComponents>
-        </Menu>
-        <Menu class="javax.swing.JMenu" name="MenuVuelo">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Vuelo"/>
-          </Properties>
-          <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="ConsultarVuelo">
+            <MenuItem class="javax.swing.JMenuItem" name="InfoVuelo">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Consultar Informaci&#xf3;n del Vuelo"/>
+                <Property name="text" type="java.lang.String" value="Informaci&#xf3;n del Vuelo"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -123,9 +119,9 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="Button21" min="-2" max="-2" attributes="0"/>
                               <Component id="Button27" min="-2" max="-2" attributes="0"/>
@@ -198,7 +194,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="Button9" min="-2" max="-2" attributes="0"/>
                               <Component id="Button15" min="-2" max="-2" attributes="0"/>
@@ -260,7 +256,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="93" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
